@@ -27,6 +27,7 @@ VERSION 1.1:
   ADD: Support for password-protected streams, by wef <javapojken@yahoo.se>. 
   FIX: GStreamer engine must not allow non-audio filetypes in playlist.
   ADD: Icon for "Menu" button in toolbar. Improves Usability.
+  ADD: Seeking with mousewheel in playerwindow.
 
 VERSION 1.0.2:
   FIX: aRts-engine: Compatibility with newer aRts versions improved.
